--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -5,8 +5,7 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = ¡Funda una ciudad!\nSelecciona el colono (unidad con la bandera) > Haz clic en 'Fundar ciudad' (abajo a la izquierda)
 Enter the city screen!\nClick the city button twice = Entra en la vista de la ciudad!\nHaz clic en la ciudad dos veces
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Elige una tecnología para investigar!\nHaz clic en el botón de la tecnología (verde, arriba a la izquierda) > \n Selecciona la tecnología > Haz clic en 'Investigar' (abajo a la derecha)
- # Requires translation!
-Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
+Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = ¡Elige una construcción!\nEntra en la vista de la ciudad > Haz clic en un edificio o unidad (abajo a la izquierda) >\nHaz clic en "Añadir a lista"
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = ¡Pasa un turno!\nRecorre tus unidades con 'Siguiente unidad' > Haz clic en 'Siguiente turno'
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reasigna casillas a explotar!\nEntra en la vista de la ciudad > Haz clic en la casilla asignada (en verde) para desasignarla > \n Haz clic en una casilla desasignada para asignarle población
 Meet another civilization!\nExplore the map until you encounter another civilization! = ¡Conoce otra civilización!\nExplora el mapa hasta que te encuentres con otra civilización!
@@ -61,11 +60,9 @@ Colossus = Coloso
 +1 gold from worked water tiles in city = +1 de oro por cada casilla de agua explotada en esta ciudad
 
 Temple = Templo
-Burial Tomb = Tumba Sagrada
- # Requires translation!
-Doubles Gold given to enemy if city is captured = 
- # Requires translation!
-Mud Pyramid Mosque = 
+Burial Tomb = Tumba 
+Doubles Gold given to enemy if city is captured = Dobla la cantidad de oro que se da al enemigo si la ciudad es capturada
+Mud Pyramid Mosque = Mezquita piramidal
 
 The Oracle = El Oráculo
 'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 'El oráculo de Delfos ha dicho que soy el más sabio de todos los griegos. Eso es porque, de todos ellos, solo yo sé que no sé nada.' - Sócrates
@@ -295,22 +292,14 @@ Requires a [buildingName] in this city = Requiere un [buildingName] en la misma 
 Requires [resource] = Requiere [resource]
 Required tech: [requiredTech] = Tecnología requerida: [requiredTech]
 
- # Requires translation!
-Current construction = 
- # Requires translation!
-Construction queue = 
- # Requires translation!
-Pick a construction = 
- # Requires translation!
-Queue empty = 
- # Requires translation!
-Add to queue = 
- # Requires translation!
-Remove from queue = 
- # Requires translation!
-Show stats drilldown = 
- # Requires translation!
-Show construction queue = 
+Current construction = Construcción actual
+Construction queue = Lista de construcción
+Pick a construction = Escoge una construcción
+Queue empty = Lista vacía
+Add to queue = Añadir a lista
+Remove from queue = Eliminar de lista
+Show stats drilldown = Mostrar desglose de atributos
+Show construction queue = Mostrar lista de construcción
 
 Diplomacy = Diplomacia
 War = Guerra
@@ -336,14 +325,10 @@ Indeed! = ¡Por supuesto!
 Denounce ([numberOfTurns] turns) = Denunciar ([numberOfTurns] turnos)]
 We will remember this. = Recordaremos esto.
 
- # Requires translation!
-[civName] has declared war on [targetCivName]! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Peace Treaty! = 
- # Requires translation!
-[civName] and [targetCivName] have signed the Declaration of Friendship! = 
- # Requires translation!
-[civName] has denounced [targetCivName]! = 
+[civName] has declared war on [targetCivName]! = ¡[civName] ha declarado la guerra a [targetCivName]!
+[civName] and [targetCivName] have signed the Peace Treaty! = ¡[civName] y [targetCivName] han firmado un tratado de paz!
+[civName] and [targetCivName] have signed the Declaration of Friendship! = ¡[civName] y [targetCivName] han firmado una declaración de amistad!
+[civName] has denounced [targetCivName]! = ¡[civName] a denunciado a [targetCivName]!
 
 Unforgivable = Imperdonable
 Enemy = Enemigo
@@ -689,8 +674,7 @@ We have discovered the lost technology of [techName] in the ruins! = ¡Hemos des
 A [unitName] has joined us! = ¡Un [unitName] se ha unido a nosotros!
 An ancient tribe trains our [unitName] in their ways of combat! = ¡Una antigua tribu entrena a nuestros [unitName] en sus formas de combate!
 We have found a stash of [amount] gold in the ruins! = ¡Hemos encontrado un alijo de [amount] de oro en las ruinas!
- # Requires translation!
-We have found a crudely-drawn map in the ruins! = 
+We have found a crudely-drawn map in the ruins! = ¡Hemos encontrado un mapa rudimentario en las ruinas!
 [unit] finished exploring. = [unit] terminó de explorar.
 [unit] has no work to do. = [unit] no tiene trabajo.
 You're losing control of [name]. = Estás perdiendo el control de [name].
@@ -716,8 +700,7 @@ We have received [goldAmount] Gold for discovering [naturalWonder] = Hemos recib
 Your relationship with [cityStateName] is about to degrade = Tus relaciones con [cityStateName] están a punto de empeorar
 Your relationship with [cityStateName] degraded = Tus relaciones con [cityStateName] han empeorado
 A new barbarian encampment has spawned! = ¡Ha aparecido un nuevo campamento bárbaro!
- # Requires translation!
-Received [goldAmount] Gold for capturing [cityName] = 
+Received [goldAmount] Gold for capturing [cityName] = Se ha recibido [goldAmount] de oro por capturar [cityName]
 
 # World Screen UI
 
@@ -779,8 +762,7 @@ Victory status = Estado de victoria
 Social policies = Políticas sociales
 Community = Comunidad
 Close = Cerrar
- # Requires translation!
-Do you want to exit the game? = 
+Do you want to exit the game? = ¿Quieres salir del juego?
 
 # City screen
 
@@ -863,8 +845,7 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Acelerar Maravilla
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = ¡Tus ciudadanos han estado contentos con tu gobierno durante tanto tiempo que el imperio ha entrado en una Edad de Oro!
 You have entered the [newEra]! = ¡Has entrado en la [newEra]!
- # Requires translation!
-[civName] has entered the [eraName]! = 
+[civName] has entered the [eraName]! = ¡[civName] a alcanzado [eraName]!
 [policyBranch] policy branch unlocked! = ¡Rama política [policyBranch] desbloqueada!
 Overview = Visión general
 Total = Total
@@ -893,8 +874,7 @@ Action =  Acción
 Defeated = Derrotado
 Tiles = Casillas
 Natural Wonders = Maravillas naturales
- # Requires translation!
-Treasury deficit = 
+Treasury deficit = Déficit de tesorería
 
 #Victory
 
@@ -952,8 +932,7 @@ May contain [listOfResources] = Puede contener [listOfResources]
 Upgrades to [upgradedUnit] = Mejora a [upgradedUnit]
 Obsolete with [obsoleteTech] = Se hace obsoleto con [obsoleteTech]
 Occurs on [listOfTerrains] = Ocurre en [listOfTerrains]
- # Requires translation!
-Placed on [terrainType] = 
+Placed on [terrainType] = Colocado en [terrainType]
 Can be found on  = Se puede encontrar en
 Improved by [improvement] = Mejorado por [improvement]
 Bonus stats for improvement:  = Bonus de atributos por mejora:
@@ -979,10 +958,8 @@ Clear terrain features = Limpiar características de terreno
 Clear improvements = Limpiar mejoras
 Clear resource = Limpiar recurso
 Requires = Requiere
- # Requires translation!
-Menu = 
- # Requires translation!
-Brush Size = 
+Menu = Menú
+Brush Size = Tamaño del pincel
 
 # Civilopedia Tutorials names
 
@@ -1343,10 +1320,8 @@ Fountain of Youth = Fuente de la juventud
 
 # Natural Wonders Uniques
 
- # Requires translation!
-Grants 500 Gold to the first civilization to discover it = 
- # Requires translation!
-Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = 
+Grants 500 Gold to the first civilization to discover it = Otorga 500 de oro a la primera civilización que la descubra
+Grants Rejuvenation (all healing effects doubled) to adjacent military land units for the rest of the game = Otorga rejuvenecimiento (todo efecto de curacíon se dobla) a todas las unidades militares terrestres adyacentes para el resto de la partida
 
 # Resources
 
@@ -1481,26 +1456,21 @@ Pikeman = Piquero
 Landsknecht = Lansquenete
 Knight = Caballero
 Camel Archer = Arquero a camello
- # Requires translation!
-Conquistador = 
- # Requires translation!
-Mandekalu Cavalry = 
- # Requires translation!
-Defense bonus when embarked = 
+Conquistador = Conquistador
+Mandekalu Cavalry = Caballería mandekalu
+Defense bonus when embarked = Bonus de defensa mientras esté embarcado
 Naresuan's Elephant = Elefante Naresuan
 Samurai = Samurai
 Combat very likely to create Great Generals = Es mas probable que se creen Grandes Generales a través del combate
 Caravel = Caravela
 Turtle Ship = Barco tortuga
-+1 Visibility Range = +1 al Rango de Visibilidad
- # Requires translation!
-+2 Visibility Range = 
++1 Visibility Range = +1 al rango de visibilidad
++2 Visibility Range = +2 al rango de visibilidad
 Cannon = Cañón
 Musketman = Mosquetero
 Musketeer = Mosquetero Revolucionario
 Janissary = Jenízaro
- # Requires translation!
-Tercio = 
+Tercio = Tercio
 Heals [amountHealed] damage if it kills a unit = Se cura [amountHealed] de daño si mata a una unidad
 Minuteman = Milicia Revolucionaria
 Frigate = Fragata
