--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -305,11 +305,12 @@ Diplomacy = Дипломатія
 War = Війна
 Peace = Мир
 Declare war = Оголосити війну
-Declare war on [civName]? = Ви дійсно хочете оголосити війну цивілізації «[civName]»?
+Declare war on [civName]? = Ви дійсно хочете оголосити війну нації «[civName]»?
 [civName] has declared war on us! = [civName] оголосила війну нам!
 [leaderName] of [nation] = [leaderName], правитель нації [nation]
-You'll pay for this! = Ви заплатите за це
+You'll pay for this! = Ви заплатите за це!
 Negotiate Peace = Запропонувати мир
+Peace with [civName]? = Запропонувати мир [civName]?
 Very well. = Дуже добре
 Farewell. = До зустрічі
 Sounds good! = Звучит добре
@@ -502,6 +503,32 @@ Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked un
 Spain = Іспанія
 Isabella = Ізабелла
 100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 золота за виявлення природного дива (бонус збільшується до 500 золотих, якщо ви були першими). Культура, щастя та врожайність клітин біля природних чудес подвоїлися.
+
+# City-states
+Manila = Маніля
+Kuala Lumpur = Куала-Лумпур
+Helsinki = Гельсінкі
+Quebec City = Квебек
+Hanoi = Ханой
+Kathmandu = Катманду
+Cape Town = Кейптаун
+Sydney = Сідней
+Zanzibar = Занзібар
+Singapore = Сінгапур
+Edinburgh = Едибург
+Almaty = Алмати
+Sidon = Сидон
+Kabul = Кабул
+Brussels = Брюссель
+Venice = Венеція
+Genoa = Генуя
+Ur = Ур
+Tyre = Сур
+Dublin = Дублін
+Antwerp = Антверпен
+Rio de Janeiro = Ріо-де-Жанейро
+Florence = Флоренція
+Milan = Мілан
 
 # New game screen
 
@@ -886,16 +913,16 @@ Treasury deficit = Дефіцит коштів
 Science victory = Наукова перемога
 Cultural victory = Культурна перемога
 Conquest victory = Завоювання
-Complete all the spaceship parts\n to win! = Побудуйте усі частини космічного корабля\n, щоб виграти!
+Complete all the spaceship parts\n to win! = Побудуйте усі частини космічного корабля,\n щоб перемогти!
 Complete 5 policy branches\n to win! = Завершіть 5 гілок інститутів щоб перемогти!
-Destroy all enemies\n to win! = Знищь всіх ворогів\n, щоб виграти!
+Destroy all enemies\n to win! = Знищь всіх ворогів,\n щоб перемогти!
 You have won a scientific victory! = Ви здобули наукову перемогу!
 You have won a cultural victory! = Ви здобули культурну перемогу!
 You have won a domination victory! = Ви знищили усіх!
 You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = Ви домоглися перемоги завдяки приголомшливій силі вашої культури. Велич вашої цивілізації — пишність пам’ятників та сила її митців вразили світ! Поети будуть шанувати вас до тих пір, поки краса приносить радість стомленому серцю.
 The world has been convulsed by war. Many great and powerful civilizations have fallen, but you have survived - and emerged victorious! The world will long remember your glorious triumph! = Світ заплутаний війною. Занепало багато великих і могутніх цивілізацій, але ви вижили — і вийшли переможцями! Світ надовго запам’ятає твій славний тріумф!
 You have achieved victory through mastery of Science! You have conquered the mysteries of nature and led your people on a voyage to a brave new world! Your triumph will be remembered as long as the stars burn in the night sky! = Ви здобули перемогу завдяки оволодінню Наукою! Ви перемогли таємниці природи і повели своїх людей у плавання до сміливого нового світу! Ваш тріумф запам’ятається до тих пір, поки на нічному небі горить зірки!
-You have been defeated. Your civilization has been overwhelmed by its many foes. But your people do not despair, for they know that one day you shall return - and lead them forward to victory! = Ви зазнали поразки. Вашу цивілізацію переповнили численні вороги. Але ваш народ не впадає у відчай, бо вони знають, що одного дня ва повернетеся — і поведете їх до перемоги!
+You have been defeated. Your civilization has been overwhelmed by its many foes. But your people do not despair, for they know that one day you shall return - and lead them forward to victory! = Ви зазнали поразки. Вашу цивілізацію переповнили численні вороги. Але ваш народ не впадає у відчай, бо вони знають, що одного дня ви повернетеся — і поведете їх до перемоги!
 One more turn...! = Ще один хід...
 Built Apollo Program = Здійснити Програму Аполлон
 Destroy [civName] = Знищити [civName]
