--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -282,8 +282,8 @@ Increases production of spaceship parts by 25% = +25% Produzione per le parti de
 
 # Diplomacy,Trade,Nations
 
-Requires [buildingName] to be built in the city = Richiede la costruzione di [buildingName] nella città
-Requires [buildingName] to be built in all cities = Richiede la costruzione di [buildingName] in tutte le città
+Requires [buildingName] to be built in the city = La Città richiede [buildingName]
+Requires [buildingName] to be built in all cities = L'Impero richiede [buildingName]
 Provides a free [buildingName] in the city = Dona l'edificio gratuito [buildingName] nella città
 Requires worked [resource] near city = Richiede che la città sfrutti [resource]
 Wonder is being built elsewhere = Meraviglia in costruzione altrove
@@ -313,7 +313,7 @@ Negotiate Peace = Negozia una pace
 Very well. = Molto bene.
 Farewell. = Addio.
 Sounds good! = Sta bene!
-Not this time. = Non questa volta.
+Not this time. = Questo mai!
 Excellent! = Eccellente!
 How about something else... = Che ne dici di questa offerta?
 A pleasure to meet you. = Siamo lieti di incontrarvi.
@@ -845,7 +845,7 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Accellera Meraviglia
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = I tuoi cittadini sono da tempo contenti del tuo governo! Il tuo impero è entrato in un'Età dell'Oro!
 You have entered the [newEra]! = Benvenuto nell'Era [newEra]!
-[civName] has entered the [eraName]! = [civName] è entrato nell'Era [eraName]!
+[civName] has entered the [eraName]! = [civName] ha raggiunto l'Era [eraName]!
 [policyBranch] policy branch unlocked! = Ramo sociale [policyBranch] sbloccato!
 Overview = Panoramica
 Total = Totale
@@ -1034,8 +1034,8 @@ Military Caste = Casta Militare
 Each city with a garrison increases happiness by 1 and culture by 2 = +1 Felicità e +2 Cultura per ogni città con una guarnigione
 Professional Army = Esercito professionale
 Honor Complete = Onore Completo
-
 Gain gold for each unit killed = Ottieni Oro ogni volta che elimini un'unità nemica
+
 Piety = Devozione
 Building time of culture buildings reduced by 15% = -15% tempi di costruzione per le strutture religiose
 Organized Religion = Religione Organizzata
@@ -1627,6 +1627,6 @@ Bonus when intercepting [amount]% = [amount]% bonus d'intercettazione
 Ambush I = Imboscata aerea I
 Ambush II = Imboscata aerea II
 Haka War Dance = Danza di guerra Haka
--10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa unità
+-10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa
 Rejuvenation = Ringiovanimento
-All healing effects doubled = Tutti gli effetti di cura sono raddoppiati
+All healing effects doubled = Raddoppia gli effetti curativi
