--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -310,6 +310,7 @@ Declare war on [civName]? =
 [leaderName] of [nation] = 
 You'll pay for this! = 
 Negotiate Peace = 
+Peace with [civName]? = 
 Very well. = 
 Farewell. = 
 Sounds good! = 
@@ -367,6 +368,31 @@ We shall do as we please. =
 We noticed your new city near our borders, despite your promise. This will have....implications. = 
 
 # City states
+
+Manila =
+Kuala Lumpur = 
+Helsinki = 
+Quebec City = 
+Hanoi = 
+Kathmandu = 
+Cape Town = 
+Sydney = 
+Zanzibar = 
+Singapore = 
+Edinburgh = 
+Almaty = 
+Sidon = 
+Kabul = 
+Brussels = 
+Venice = 
+Genoa = 
+Ur = 
+Tyre = 
+Dublin = 
+Antwerp = 
+Rio de Janeiro = 
+Florence = 
+Milan = 
 
 Provides [amountOfCulture] culture at 30 Influence = 
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 
@@ -517,6 +543,10 @@ Map type =
 Generated = 
 Existing = 
 Map generation type = 
+Default = 
+Pangaea = 
+Perlin = 
+Continents = 
 Number of city-states = 
 One City Challenge = 
 No barbarians = 
@@ -701,6 +731,7 @@ Your relationship with [cityStateName] is about to degrade =
 Your relationship with [cityStateName] degraded = 
 A new barbarian encampment has spawned! = 
 Received [goldAmount] Gold for capturing [cityName] = 
+Our proposed trade request is no longer relevant! = 
 
 # World Screen UI
 
