fixed typo in German sheep translation

--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -1393,7 +1393,7 @@ Grants Rejuvenation (all healing effects doubled) to adjacent military land unit
 # Resources
 
 Cattle = Rinder
-Sheep = Schaafe
+Sheep = Schafe
 Deer = Rotwild
 Bananas = Bananen
 Wheat = Weizen
