Fix for unit tests related to the translations

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -1690,6 +1690,22 @@ Reduces damage taken from interception by 50% = Redukuje škody způsobené inte
 Bonus when intercepting [amount]% = Bonus při zachytávání útoků [amount]%
 Ambush I = Přepadení I
 Ambush II = Přepadení II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++[25]% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Haka War Dance = Haka - valečný tanec
 -10% combat strength for adjacent enemy units = -10% bojové síly pro nepřátelské jednotky na sousedních políčkách
 Rejuvenation = Omlazení
