--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -1991,6 +1991,22 @@ Reduces damage taken from interception by 50% = Mengurangi kerusakan yang diteri
 Bonus when intercepting [amount]% = Bonus ketika mencegat [amount]%
 Ambush I = Sergapan I
 Ambush II = Sergapan II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++[25]% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Haka War Dance = Tarian Perang Haka
 -10% combat strength for adjacent enemy units = -10% kekuatan tempur karena di dekat unit musuh
 Rejuvenation = Pembaruan
