--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1875,6 +1875,22 @@ Reduces damage taken from interception by 50% = Reduz o dano recebido de interce
 Bonus when intercepting [amount]% = [amount]% de bônus ao interceptar
 Ambush I = Emboscada Aérea I
 Ambush II = Emboscada Aérea II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++[25]% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Haka War Dance = Dança de Guerra Haka
 -10% combat strength for adjacent enemy units = -10% de força de combate para cada unidade inimiga adjacente
  # Requires translation!
