--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -1688,6 +1688,22 @@ Reduces damage taken from interception by 50% = 遭受攔截時的損傷-50%
 Bonus when intercepting [amount]% = 執行攔截任務時+[amount]%戰鬥力
 Ambush I = 伏擊I級
 Ambush II = 伏擊II級
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++[25]% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Haka War Dance = 哈卡戰舞
 -10% combat strength for adjacent enemy units = 相鄰的敵方單位-10%戰鬥力
 Rejuvenation = 返老还童
