--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -517,10 +517,6 @@ Map type = Тип мапи
 Generated = Створена
 Existing = Існуюче
 Map generation type = Тип генерації мап
-Pangaea = Пангея
-Continents = Континенти
-Default = Звичайний
-Perlin = Перлин
 Number of city-states = Міст-держав
 One City Challenge = Випробовування «Одне місто»
 No barbarians = Без варварів
@@ -705,7 +701,6 @@ Your relationship with [cityStateName] is about to degrade = Ваші стосу
 Your relationship with [cityStateName] degraded = Ваші стосунки з [cityStateName] погіршилися
 A new barbarian encampment has spawned! = З’явився новий варварський табір!
 Received [goldAmount] Gold for capturing [cityName] = Отримано [goldAmount] золота за захоплення міста [cityName]
-Our proposed trade request is no longer relevant! = Наша торгова пропозиція не є доречною!
 
 # World Screen UI
 
@@ -1631,6 +1626,22 @@ Reduces damage taken from interception by 50% = Пошкодження від п
 Bonus when intercepting [amount]% = При перехопленні отримує силу +[amount]%
 Ambush I = Повітряна засідка I
 Ambush II = Повітряна засідка II
+ # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++[25]% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
 Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
 Rejuvenation = Омолодження
