--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -2695,6 +2695,22 @@ Bonus when intercepting [amount]% =
 Ambush I = Hinderlaag I
 Ambush II = Hinderlaag II
  # Requires translation!
+Armor Plating I = 
+ # Requires translation!
+Armor Plating II = 
+ # Requires translation!
+Armor Plating III = 
+ # Requires translation!
++[25]% Combat Bonus when defending = 
+ # Requires translation!
+Flight Deck I = 
+ # Requires translation!
+Flight Deck II = 
+ # Requires translation!
+Flight Deck III = 
+ # Requires translation!
+Can carry 1 extra air unit = 
+ # Requires translation!
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
