Undid inadvertent removals in some translation files.

--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -886,8 +886,7 @@ Conquest victory = Fetih zaferi
 Complete all the spaceship parts\n to win! = Kazanmak için\n tüm uzay gemisi parçalarını tamamla!
 Complete 5 policy branches\n to win! = Kazanmak için\n 5 politika dalı tamamlayın!
 Destroy all enemies\n to win! = Kazanmak için\n tüm düşmanları yok et! 
- # Requires translation!
-You have won a scientific victory! = 
+You have won a scientific victory! = Bir bilimsel zafer kazandınız!
 You have won a cultural victory! = Bir kültürel zafer kazandınız!
 You have won a domination victory! = Bir hakimiyet zaferi kazandınız!
 You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = Kültürünüzün müthiş gücü ile zafer kazandınız. Medeniyetinizin büyüklüğü - anıtlarının ihtişamı ve sanatçılarının gücü - dünyayı hayrete düşürdü! Güzellik yorgun bir kalbe mutluluk getirdiği sürece şairler sizi onurlandıracaktır.
@@ -1546,8 +1545,7 @@ Bonus for units in 2 tile radius 15% = 2 kare yarıçapındaki birimler için 15
 # Promotions
 
 Pick promotion = Terfi seçin
- # Requires translation!
- OR  = 
+OR  = YA DA
 Bonus vs [unitType] = [unitType]'a karşı bonus
 Penalty vs [unitType] = [unitType]'a karşı zayıflık
 Accuracy I = Doğruluk 1
