--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -517,6 +517,10 @@ Map type = Тип мапи
 Generated = Створена
 Existing = Існуюче
 Map generation type = Тип генерації мап
+Pangaea = Пангея
+Continents = Континенти
+Default = Звичайний
+Perlin = Перлин
 Number of city-states = Міст-держав
 One City Challenge = Випробовування «Одне місто»
 No barbarians = Без варварів
@@ -701,6 +705,7 @@ Your relationship with [cityStateName] is about to degrade = Ваші стосу
 Your relationship with [cityStateName] degraded = Ваші стосунки з [cityStateName] погіршилися
 A new barbarian encampment has spawned! = З’явився новий варварський табір!
 Received [goldAmount] Gold for capturing [cityName] = Отримано [goldAmount] золота за захоплення міста [cityName]
+Our proposed trade request is no longer relevant! = Наша торгова пропозиція не є доречною!
 
 # World Screen UI
 
