--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -97,7 +97,7 @@ Hanging Gardens = Висячие сады
 
 Colosseum = Колизей
 
-Terracotta Army = Терракотовая армия
+Terracotta Army = Терракотоваядальность армия
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 'Если будешь смотреть на солдат, как на детей, сможешь отправиться с ними в самое глубокое ущелье; если будешь смотреть на солдат, как на любимых сыновей, сможешь идти с ними хоть на смерть.' - Сунь Цзы
 
 Market = Рынок
@@ -1573,7 +1573,7 @@ Mobility = Мобильность
 Volley = Залп
 Sentry = Караул
 Extended Range = Обзор
-+1 Range = +1 Обзор
++1 Range = +1 Дальность
 Ranged attacks may be performed over obstacles = Дальнобойные атаки могут выполняться над препятствиями
 Formation I = Формация I
 Formation II = Формация II
