Revert "Fix for unit tests related to the translations"
This reverts commit a97eee713529e561d3bd66d64619e2ab2060a52d.

--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -445,7 +445,6 @@ Napoleon = Napolyon
 
 Russia = Rusya
 Catherine = Katerina
- # Requires translation!
 Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity = 
 
 Rome = Roma
@@ -696,7 +695,6 @@ One of our trades with [nation] has been cut short = [nation] ile yaptığımız
 [nation] refused to stop settling cities near us! = [nation] yakınımızdaki şehirlere yerleşmeyi bırakmayı reddetti!
 We have allied with [nation]. = [nation] ile ittifak oluşturduk.
 We have lost alliance with [nation]. = [nation] ile ittifakımızı kaybettik.
- # Requires translation!
 We have discovered [naturalWonder]! = 
 We have received [goldAmount] Gold for discovering [naturalWonder] = [naturalWonder] keşfettiğimiz için [goldAmount] Altın aldık 
 Your relationship with [cityStateName] is about to degrade = [cityStateName] ile ilişkiniz bozulmak üzere
@@ -886,8 +884,7 @@ Conquest victory = Fetih zaferi
 Complete all the spaceship parts\n to win! = Kazanmak için\n tüm uzay gemisi parçalarını tamamla!
 Complete 5 policy branches\n to win! = Kazanmak için\n 5 politika dalı tamamlayın!
 Destroy all enemies\n to win! = Kazanmak için\n tüm düşmanları yok et! 
- # Requires translation!
-You have won a scientific victory! = 
+You have won a scientific victory! =Bir bilimsel zafer kazandınız!
 You have won a cultural victory! = Bir kültürel zafer kazandınız!
 You have won a domination victory! = Bir hakimiyet zaferi kazandınız!
 You have achieved victory through the awesome power of your Culture. Your civilization's greatness - the magnificence of its monuments and the power of its artists - have astounded the world! Poets will honor you as long as beauty brings gladness to a weary heart. = Kültürünüzün müthiş gücü ile zafer kazandınız. Medeniyetinizin büyüklüğü - anıtlarının ihtişamı ve sanatçılarının gücü - dünyayı hayrete düşürdü! Güzellik yorgun bir kalbe mutluluk getirdiği sürece şairler sizi onurlandıracaktır.
@@ -1470,7 +1467,6 @@ Turtle Ship = Kaplumbağa Gemi
 +1 Visibility Range = +1 Görüş Mesafesi
 +2 Visibility Range = +2 Görüş Mesafesi
 Cannon = Top
- # Requires translation!
 Musketman = 
 Musketeer = Silâhşör
 Janissary = Yeniçeri
@@ -1546,8 +1542,7 @@ Bonus for units in 2 tile radius 15% = 2 kare yarıçapındaki birimler için 15
 # Promotions
 
 Pick promotion = Terfi seçin
- # Requires translation!
- OR  = 
+OR  = YA DA
 Bonus vs [unitType] = [unitType]'a karşı bonus
 Penalty vs [unitType] = [unitType]'a karşı zayıflık
 Accuracy I = Doğruluk 1
@@ -1631,22 +1626,6 @@ Reduces damage taken from interception by 50% = Toplamadan alınan hasarı% 50 a
 Bonus when intercepting [amount]% = [amount]% ele geçirilirken bonus
 Ambush I = Pusu 1
 Ambush II = Pusu 2
- # Requires translation!
-Armor Plating I = 
- # Requires translation!
-Armor Plating II = 
- # Requires translation!
-Armor Plating III = 
- # Requires translation!
-+[25]% Combat Bonus when defending = 
- # Requires translation!
-Flight Deck I = 
- # Requires translation!
-Flight Deck II = 
- # Requires translation!
-Flight Deck III = 
- # Requires translation!
-Can carry 1 extra air unit = 
 Haka War Dance = Haka Savaş Dansı
 -10% combat strength for adjacent enemy units = Bitişik düşman birimleri için% -10 savaş gücü
 Rejuvenation = Gençleştirme
