Implemented aircraft carrier by @ltrcao in PR #1723

--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -3050,6 +3050,8 @@ Ambush I =
  # Requires translation!
 Ambush II = 
  # Requires translation!
+Can carry 2 aircraft = Can carry 2 aircraft
+ # Requires translation!
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
