--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -1657,6 +1657,7 @@ Reduces damage taken from interception by 50% =
 Bonus when intercepting [amount]% = 
 Ambush I = 
 Ambush II = 
+Can carry 2 aircraft = 
 Haka War Dance = 
 -10% combat strength for adjacent enemy units = 
 Rejuvenation = 
