Feature: map editor menu

--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -977,6 +977,9 @@ Version =
 Resolution = 
 Tileset = 
 Map editor = 
+Create =
+New map = 
+Open current map = 
 Language = 
 Terrains & Resources = 
 Improvements = 
