Update Russian.properties (#1730)
* Update Russian.properties

small fix

* Update Russian.properties

--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -1633,7 +1633,7 @@ Mobility = Мобильность
 Volley = Залп
 Sentry = Караул
 Extended Range = Обзор
-+1 Range = +1 Обзор
++1 Range = +1 Дальность
 Ranged attacks may be performed over obstacles = Дальнобойные атаки могут выполняться над препятствиями
 Formation I = Формация I
 Formation II = Формация II
