--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -370,7 +370,8 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Manila =
+ # Requires translation!
+Manila = 
  # Requires translation!
 Kuala Lumpur = 
  # Requires translation!
