--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -387,7 +387,8 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Manila =
+ # Requires translation!
+Manila = 
  # Requires translation!
 Kuala Lumpur = 
  # Requires translation!
