--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -369,7 +369,8 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Manila =
+ # Requires translation!
+Manila = 
 Kuala Lumpur = Куала-Лумпур
 Helsinki = Гельсінкі
 Quebec City = Квебек
